--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9164,7 +9164,7 @@
       </notes>
       <segment>
         <source>Die Batterie fällt ein paar Meter entfernt auf den Boden.</source>
-        <target>Die Batterie fällt ein paar Meter entfernt auf den Boden.</target>
+        <target>La batería cae al suelo a unos metros de distancia.</target>
       </segment>
     </unit>
     <unit id="WgEgCbq" name="Die Batterie wurde beim Aufprall vollständig zerstört.">
@@ -9175,7 +9175,7 @@
       </notes>
       <segment>
         <source>Die Batterie wurde beim Aufprall vollständig zerstört.</source>
-        <target>Die Batterie wurde beim Aufprall vollständig zerstört.</target>
+        <target>La batería quedó completamente destruida en el impacto.</target>
       </segment>
     </unit>
     <unit id="TNGA5Rl">
@@ -9186,7 +9186,7 @@
       </notes>
       <segment>
         <source>Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}&lt;strong&gt;Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.&lt;/strong&gt;</source>
-        <target><![CDATA[Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}<strong>Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.</strong>]]></target>
+        <target><![CDATA[Este habitante traga con avidez su ración de agua sin desperdiciar una gota... Su lengua todavía está pegada al paladar y su garganta sigue tan seca como antes. {Hr}<strong>Como estaba deshidratado, no recibió ningún PA.</strong>]]></target>
       </segment>
     </unit>
     <unit id="1mv8jxQ">
@@ -9207,7 +9207,7 @@
       </notes>
       <segment>
         <source>Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</source>
-        <target>Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</target>
+        <target>Muele el contenido de {items_consume} en la mesa y lo mezcla con cualquier cosa que tenga en sus manos... luego déjelo ir.</target>
       </segment>
     </unit>
     <unit id="qeC3d4b" name="Ein überragender Erfolg: Du hast {items_spawn} erhalten!">
@@ -9218,7 +9218,7 @@
       </notes>
       <segment>
         <source>Ein überragender Erfolg: Du hast {items_spawn} erhalten!</source>
-        <target>Ein überragender Erfolg: Du hast {items_spawn} erhalten!</target>
+        <target>Un éxito abrumador: ¡has recibido {items_spawn}!</target>
       </segment>
     </unit>
     <unit id="RvnC1X2">
@@ -9229,7 +9229,7 @@
       </notes>
       <segment>
         <source>Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass &lt;strong&gt;nicht alles so gelaufen ist wie geplant&lt;/strong&gt;. Du hast eine zufällige Droge erhalten: {items_spawn}</source>
-        <target><![CDATA[Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass <strong>nicht alles so gelaufen ist wie geplant</strong>. Du hast eine zufällige Droge erhalten: {items_spawn}]]></target>
+        <target><![CDATA[El humo sospechoso que emana de la mezcla sugiere que <strong>no todo salió según lo planeado</strong>. Recibió un medicamento al azar: {items_spawn}]]></target>
       </segment>
     </unit>
     <unit id="ysZzyH_">
@@ -9240,7 +9240,7 @@
       </notes>
       <segment>
         <source>Solange du &lt;strong&gt;erschöpft bist&lt;/strong&gt;, kannst du diese Aktion nicht ausführen (da du keine Aktionspunkte mehr hast)... Trink oder iss etwas, oder nimm eine Droge, ansonsten musst du bis &lt;strong&gt;morgen&lt;/strong&gt; warten.</source>
-        <target><![CDATA[Solange du <strong>erschöpft bist</strong>, kannst du diese Aktion nicht ausführen (da du keine Aktionspunkte mehr hast)... Trink oder iss etwas, oder nimm eine Droge, ansonsten musst du bis <strong>morgen</strong> warten.]]></target>
+        <target><![CDATA[Mientras estés <strong>agotado</strong>, no puedes realizar esta acción (ya que no tienes más puntos de acción)... Bebe, come o toma una droga, de lo contrario tienes que esperar a <strong>mañana</strong>.]]></target>
       </segment>
     </unit>
     <unit id="bCsZ2JO">
@@ -9251,7 +9251,7 @@
       </notes>
       <segment>
         <source>Ja, klar... Du hast ihn schon hunderte Male gesehen, das Thema ändert sich auch nicht allzu sehr, aber trotzdem: Es geht nichts über einen guten Zombie-Film zur Entspannung.&lt;t-stat-down-terror&gt;&lt;hr /&gt;Diese seltsam fernen Schreie des Schreckens haben dir den Kopf gerade gerückt: &lt;strong&gt;Du hast deine Angst abgeschüttelt&lt;/strong&gt;.&lt;/t-stat-down-terror&gt;</source>
-        <target><![CDATA[Ja, klar... Du hast ihn schon hunderte Male gesehen, das Thema ändert sich auch nicht allzu sehr, aber trotzdem: Es geht nichts über einen guten Zombie-Film zur Entspannung.<t-stat-down-terror><hr />Diese seltsam fernen Schreie des Schreckens haben dir den Kopf gerade gerückt: <strong>Du hast deine Angst abgeschüttelt</strong>.</t-stat-down-terror>]]></target>
+        <target><![CDATA[Sí, por supuesto... lo has visto cientos de veces, el tema no cambia demasiado, pero aún así: no hay nada como una buena película de zombis para relajarse. <t-stat-down-terror><hr />Esos gritos de horror extrañamente distantes te han enderezado la cabeza: <strong>Te has quitado el miedo</strong>.</t-stat-down-terror>]]></target>
       </segment>
     </unit>
   </file>
