--- a/translations/docs+intl-icu.fr.xlf
+++ b/translations/docs+intl-icu.fr.xlf
@@ -1259,7 +1259,7 @@
       </notes>
       <segment>
         <source>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</source>
-        <target>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</target>
+        <target>Phase de ville; soit "alpha", "beta", "import" ou "native"</target>
       </segment>
     </unit>
     <unit id="5F7mt2z" name="Herkunfts-Server der Stadt">
@@ -1270,7 +1270,7 @@
       </notes>
       <segment>
         <source>Herkunfts-Server der Stadt</source>
-        <target>Herkunfts-Server der Stadt</target>
+        <target>Serveur source de la ville</target>
       </segment>
     </unit>
   </file>
