ES Translation fix for chamanic rain

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -7584,7 +7584,7 @@
       </notes>
       <segment>
         <source>Du vollführst einen Schamanentanz und betest zum Himmel, dass er Regen bringen und diese unselige Zone reinigen möge.</source>
-        <target>Realizas una danza chamánica y rezas a los cielos para que traiga la lluvia y limpie esta desafortunada zona.</target>
+        <target>Haces una dansa chamánica y cantas al cielo para que libere la lluvia purificadora de espíritus.</target>
       </segment>
     </unit>
     <unit id="jveYh8O">
@@ -7594,7 +7594,7 @@
       </notes>
       <segment>
         <source>Doch nichts passiert... Soviel steht fest, du stehst nun wie ein lausiger Amateur da. Außer Blasen an den Füßen hat das alles nichts eingebracht...</source>
-        <target>Pero no pasa nada... Eso es cierto, ahora estás parado allí como un pésimo aficionado. A excepción de las ampollas en los pies, nada de esto trajo nada...</target>
+        <target>Pero nada sucede. Si alguien te vio, quedaste como un aficionado o charlatán de la peor calaña. Y para colmo de males, te están sangrando las plantas de los pies...</target>
       </segment>
     </unit>
     <unit id="ROlGH4i">
