--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22833,5 +22833,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Die Stadt hat folgende Gegenstände in Folge der Hinrichtung von {shunned} zurückerhalten: {list}</target>
       </segment>
     </unit>
+    <unit id="SwF.EK1" name="Du kannst kein(en) {item} per Post versenden.">
+      <notes>
+        <note category="german">Du kannst kein(en) {item} per Post versenden.</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du kannst kein(en) {item} per Post versenden.</source>
+        <target>Du kannst kein(en) {item} per Post versenden.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
