--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22738,5 +22738,16 @@ cette violente opération...]]></target>
         <target>Die Stadt hat folgende Gegenstände in Folge der Hinrichtung von {shunned} zurückerhalten: {list}</target>
       </segment>
     </unit>
+    <unit id="SwF.EK1" name="Du kannst kein(en) {item} per Post versenden.">
+      <notes>
+        <note category="german">Du kannst kein(en) {item} per Post versenden.</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du kannst kein(en) {item} per Post versenden.</source>
+        <target>Vous ne pouvez pas envoyer {item} en tant que pièce jointe.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
