--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22742,11 +22742,30 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Du kannst kein(en) {item} per Post versenden.</note>
         <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Du kannst kein(en) {item} per Post versenden.</source>
         <target>Vous ne pouvez pas envoyer {item} en tant que pièce jointe.</target>
+      </segment>
+    </unit>
+    <unit id="FWgGHVi">
+      <notes>
+        <note category="german">Die Bürger haben entschieden, {citizen} zu &lt;strong&gt;erhängen&lt;/strong&gt;!! Der Galgen wurde im Zuge dieser gewalttätigen Aktion &lt;strong&gt;zerstört&lt;/strong&gt;!</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Die Bürger haben entschieden, {citizen} zu &lt;strong&gt;erhängen&lt;/strong&gt;!! Der Galgen wurde im Zuge dieser gewalttätigen Aktion &lt;strong&gt;zerstört&lt;/strong&gt;!</source>
+        <target><![CDATA[Les citoyens ont décidé de <strong>pendre</strong> {citizen} !! La potence a été détruite au cours de ce violent évènement !]]></target>
+      </segment>
+    </unit>
+    <unit id="xQMsReM">
+      <notes>
+        <note category="german">Die Bürger haben entschieden, {citizen} in den &lt;strong&gt;Fleischkäfig&lt;/strong&gt; zu zerren und dort zum Vergnügen aller zu steinigen... Die Stadt hat &lt;strong&gt;+{def} temporäre Stadtverteidigung&lt;/strong&gt; erhalten!</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Die Bürger haben entschieden, {citizen} in den &lt;strong&gt;Fleischkäfig&lt;/strong&gt; zu zerren und dort zum Vergnügen aller zu steinigen... Die Stadt hat &lt;strong&gt;+{def} temporäre Stadtverteidigung&lt;/strong&gt; erhalten!</source>
+        <target><![CDATA[Les citoyens ont décidé de traîner {citizen} à la <strong>Cage à Viande</strong>, puis de le lapider pour le spectacle... La ville a reçu <strong>+{def} pts de défense temporaire</strong> !]]></target>
       </segment>
     </unit>
   </file>
