--- a/translations/validators.fr.xlf
+++ b/translations/validators.fr.xlf
@@ -961,6 +961,16 @@
         <target>Cette valeur n'est pas un code international de sécurité valide (ISIN).</target>
       </segment>
     </unit>
+    <unit id="6akW5mb" name="This value should be a valid expression.">
+      <notes>
+        <note category="german">Dieser Wert sollte eine gültige Expression sein.</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>This value should be a valid expression.</source>
+        <target>Cette valeur doit être une expression valide.</target>
+      </segment>
+    </unit>
     <unit id=".SEaaBa" name="This form should not contain extra fields.">
       <notes>
         <note category="german">Dieses Formular sollte keine zusätzlichen Felder enthalten.</note>
