--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22865,5 +22865,27 @@
         <target><![CDATA[Die Bürger haben entschieden, {citizen} in den <strong>Fleischkäfig</strong> zu zerren und dort zum Vergnügen aller zu steinigen... Die Stadt hat <strong>+{def} temporäre Stadtverteidigung</strong> erhalten!]]></target>
       </segment>
     </unit>
+    <unit id="YSYYhvU" name="Anonyme Beschwerde ({num} insgesamt)">
+      <notes>
+        <note category="german">Anonyme Beschwerde ({num} insgesamt)</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php;php:///src/Controller/Town/TownHomeController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Anonyme Beschwerde ({num} insgesamt)</source>
+        <target>Anonyme Beschwerde ({num} insgesamt)</target>
+      </segment>
+    </unit>
+    <unit id="_IO1rgo" name="Beschwerde zurückgezogen (es bleiben noch {num} Stück)">
+      <notes>
+        <note category="german">Beschwerde zurückgezogen (es bleiben noch {num} Stück)</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php;php:///src/Controller/Town/TownHomeController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Beschwerde zurückgezogen (es bleiben noch {num} Stück)</source>
+        <target>Beschwerde zurückgezogen (es bleiben noch {num} Stück)</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
