--- a/translations/validators.de.xlf
+++ b/translations/validators.de.xlf
@@ -577,6 +577,12 @@
         <target>Dieser Wert ist keine gültige Internationale Wertpapierkennnummer (ISIN).</target>
       </segment>
     </unit>
+    <unit id="6akW5mb" name="This value should be a valid expression.">
+      <segment>
+        <source>This value should be a valid expression.</source>
+        <target>Dieser Wert sollte eine gültige Expression sein.</target>
+      </segment>
+    </unit>
     <unit id=".SEaaBa" name="This form should not contain extra fields.">
       <segment>
         <source>This form should not contain extra fields.</source>
