--- a/translations/validators.es.xlf
+++ b/translations/validators.es.xlf
@@ -962,6 +962,16 @@
         <target>Este valor no es un número de identificación internacional de valores (ISIN) válido.</target>
       </segment>
     </unit>
+    <unit id="6akW5mb" name="This value should be a valid expression.">
+      <notes>
+        <note category="german">Dieser Wert sollte eine gültige Expression sein.</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>This value should be a valid expression.</source>
+        <target>Este valor debería ser una expresión válida.</target>
+      </segment>
+    </unit>
     <unit id=".SEaaBa" name="This form should not contain extra fields.">
       <notes>
         <note category="german">Dieses Formular sollte keine zusätzlichen Felder enthalten.</note>
